--- a/clients/web/src/app/styles.scss
+++ b/clients/web/src/app/styles.scss
@@ -1,7 +1,17 @@
-body {
-	margin: 0;
-	padding: 0;
-	font-family: sans-serif;
+html {
+	position: relative;
+	min-height: 100%;
+
+	body .container {
+		margin: 0;
+		max-width: 100%;
+	}
+}
+
+
+footer, .footer {
+	position: absolute;
+	bottom: 0;
 }
 
 .App {
