--- a/clients/web/src/modules/dashboard/styles.scss
+++ b/clients/web/src/modules/dashboard/styles.scss
@@ -1,3 +1,18 @@
+#dashboard-container {
+
+}
+
+#dashboard-header {
+
+}
+
+#dashboard-content {
+
+}
+
+#dashboard-footer {
+	text-align: center;
+}
 
 .bargraph {
 	padding: 50px !important;
