--- a/clients/web/src/modules/home/styles.scss
+++ b/clients/web/src/modules/home/styles.scss
@@ -1,6 +1,18 @@
 
-#main-header {
+#home-container {
+	height: 100%;
+}
+
+#home-header {
 	padding: 5px 10px !important;
+}
+
+#home-content {
+
+}
+
+#home-footer {
+	text-align: center;
 }
 
 .logo {
