--- a/clients/web/src/modules/login/styles.scss
+++ b/clients/web/src/modules/login/styles.scss
@@ -1,6 +1,17 @@
+#login-container {
+	height: 100%;
+}
+
+#login-header {
+
+}
 
 #login-content {
 	background: #fff;
+}
+
+#login-footer {
+	text-align: center;
 }
 
 #login-box {
