added transition to todos

--- a/clients/web/src/modules/dashboard/styles.scss
+++ b/clients/web/src/modules/dashboard/styles.scss
@@ -1,19 +1,24 @@
 #dashboard-container {
-
+	
 }
-
+	
 #dashboard-header {
-
+	
 }
-
+	
 #dashboard-content {
-
+	
 }
-
+	
+.ant-layout {
+	background: white;
+}
+	
 #dashboard-footer {
 	text-align: center;
 }
-
+	
 .bargraph {
 	padding: 50px !important;
 }
+	
