Setup initial site layout

--- a/clients/web/src/app/styles.less
+++ b/clients/web/src/app/styles.less
@@ -1,3 +1,14 @@
 @import "~antd/dist/antd.less";
 
-@layout-header-background: @component-background;
+@primary-color          : #0054bf;
+@info-color             : #008de7;
+@success-color          : #ffc200;
+@processing-color       : @primary-color;
+@error-color            : #d29100;
+@highlight-color        : #ffc200;
+@warning-color          : #497b09;
+@normal-color           : #d9d9d9;
+
+@dark-color             : #000c1a;
+
+@layout-header-background: @dark-color;
