--- a/clients/web/src/app/styles.scss
+++ b/clients/web/src/app/styles.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 html {
 	position: relative;
 	min-height: 100%;
@@ -8,9 +10,37 @@ html {
 	}
 }
 
-footer, .footer {
+.module-container {
+	height: 100%;
+}
+
+.menu-logo {
+	background: rgba(255,255,255,.2);
+	margin: 16px 28px 16px 0;
+	float: left;
+}
+
+.header {
+	padding: 0px 10px !important;
+}
+
+.navbar-menu {
+	line-height: 64px;
+}
+
+.content {
+	background: #fff;
+}
+
+footer {
 	position: absolute;
 	bottom: 0;
+}
+
+.footer {
+	text-align: center;
+	color: #fff;
+	background-color: #000c1a;
 }
 
 #root, #navigator {
