Put additional modules

--- a/clients/web/src/modules/home/styles.scss
+++ b/clients/web/src/modules/home/styles.scss
@@ -1,4 +1,5 @@
 
-#home-container {
-	height: 100%;
+#home-content {
+	background-image: url("../../assets/main-background.jpg");
+	background-size: cover;
 }
