--- a/clients/web/src/modules/login/styles.scss
+++ b/clients/web/src/modules/login/styles.scss
@@ -9,7 +9,7 @@
 	margin-top: 15px;
 	float: right;
 	color: white;
-	background-color: $primary-color;
+	background-color: $error-color;
 }
 
 #login-box {
