--- a/web/src/modules/home/styles.scss
+++ b/web/src/modules/home/styles.scss
@@ -1,5 +1,20 @@
 
+#home-container {
+	height: 100%;
+}
+
+#home-header {
+	padding: 5px 10px !important;
+}
+
 #home-content {
-	background-image: url("../../assets/main-background.jpg");
-	background-size: cover;
+
+}
+
+#home-footer {
+	text-align: center;
+}
+
+.logo {
+	margin: 10px;
 }
