--- a/web/src/app/styles.less
+++ b/web/src/app/styles.less
@@ -1,14 +1,3 @@
 @import "~antd/dist/antd.less";
 
-@primary-color          : #0054bf;
-@info-color             : #008de7;
-@success-color          : #ffc200;
-@processing-color       : @primary-color;
-@error-color            : #d29100;
-@highlight-color        : #ffc200;
-@warning-color          : #497b09;
-@normal-color           : #d9d9d9;
-
-@dark-color             : #000c1a;
-
-@layout-header-background: @dark-color;
+@layout-header-background: @component-background;
