--- a/web/src/modules/dashboard/styles.scss
+++ b/web/src/modules/dashboard/styles.scss
@@ -1,11 +1,24 @@
+#dashboard-container {
+	
+}
+	
 #dashboard-header {
-
+	
 }
-
+	
 #dashboard-content {
-	margin: 50px 100px 10px 100px;
+	
 }
-
+	
 .ant-layout {
 	background: white;
 }
+	
+#dashboard-footer {
+	text-align: center;
+}
+	
+.bargraph {
+	padding: 50px !important;
+}
+	
